tests/valid/noGlobalThis.ts
// @ts-nocheck
const g = game;
