tests/invalid/noGlobalThis.ts
// @ts-nocheck
const g = globalThis;
